@@ -116,6 +116,10 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 	INCLUDE(ManageVariable)
 	SET (SPEC_FILE_WARNING "This file is generated, please modified the .spec.in file instead!")
 
+	SET(RPM_SPEC_CMAKE_FLAGS "-DCMAKE_FEDORA_ENABLE_FEDORA_BUILD=1"
+	    CACHE STRING "CMake flags in RPM SPEC"
+	    )
+    
 	# %{dist}
 	EXECUTE_PROCESS(COMMAND ${RPM_CMD} -E "%{dist}"
 	    COMMAND sed -e "s/^\\.//"
@@ -126,12 +130,21 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 	SET(RPM_RELEASE_NO "1" CACHE STRING "RPM Release Number")
 
 	SET(RPM_BUILD_TOPDIR "${CMAKE_BINARY_DIR}" CACHE PATH "RPM topdir")
-	SET(RPM_BUILD_SPECS "${RPM_BUILD_TOPDIR}/SPECS" CACHE PATH "RPM SPECS dir")
-	SET(RPM_BUILD_SOURCES "${RPM_BUILD_TOPDIR}/SOURCES" CACHE PATH "RPM SOURCES dir")
-	SET(RPM_BUILD_SRPMS "${RPM_BUILD_TOPDIR}/SRPMS" CACHE PATH "RPM SRPMS dir")
-	SET(RPM_BUILD_RPMS "${RPM_BUILD_TOPDIR}/RPMS" CACHE PATH "RPM RPMS dir")
-	SET(RPM_BUILD_BUILD "${RPM_BUILD_TOPDIR}/BUILD" CACHE PATH "RPM BUILD dir")
-	SET(RPM_BUILD_BUILDROOT "${RPM_BUILD_TOPDIR}/BUILDROOT" CACHE PATH "RPM BUILDROOT dir")
+
+	SET(RPM_IGNORE_FILES "debug.*s.list")
+	FOREACH(_dir "SPECS" "SOURCES" "SRPMS" "RPMS" "BUILD" "BUILDROOT")
+	    SET(RPM_BUILD_${_dir} "${RPM_BUILD_TOPDIR}/${_dir}" 
+		CACHE PATH "RPM ${_dir} dir"
+		)
+	    MARK_AS_ADVANCED(RPM_BUILD_${_dir})
+	    IF(NOT "${_dir}" STREQUAL "SPECS")
+		LIST(APPEND RPM_IGNORE_FILES "/${_dir}/")
+		ADD_CUSTOM_COMMAND(OUTPUT ${RPM_BUILD_${_dir}}
+		    COMMAND ${CMAKE_COMMAND} -E make_directory 
+		    "${RPM_BUILD_${_dir}}"
+		    )
+	    ENDIF(NOT "${_dir}" STREQUAL "SPECS")
+	ENDFOREACH(_dir "SPECS" "SOURCES" "SRPMS" "RPMS" "BUILD" "BUILDROOT")
 
 	## RPM spec.in and RPM-ChangeLog.prev
 	SET(PRJ_RPM_SPEC_FILE "${RPM_BUILD_SPECS}/${PROJECT_NAME}.spec" CACHE FILEPATH "spec")
@@ -140,33 +153,26 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 	SET(RPM_CHANGELOG_FILE "${RPM_BUILD_SPECS}/RPM-ChangeLog" CACHE FILEPATH "ChangeLog for RPM")
 
 	# Add RPM build directories in ignore file list.
-	GET_FILENAME_COMPONENT(_rpm_build_sources_basename ${RPM_BUILD_SOURCES} NAME)
-	GET_FILENAME_COMPONENT(_rpm_build_srpms_basename ${RPM_BUILD_SRPMS} NAME)
-	GET_FILENAME_COMPONENT(_rpm_build_rpms_basename ${RPM_BUILD_RPMS} NAME)
-	GET_FILENAME_COMPONENT(_rpm_build_build_basename ${RPM_BUILD_BUILD} NAME)
-	GET_FILENAME_COMPONENT(_rpm_build_buildroot_basename ${RPM_BUILD_BUILDROOT} NAME)
-	SET(RPM_IGNORE_FILES
-	    "/${_rpm_build_sources_basename}/" "/${_rpm_build_srpms_basename}/" "/${_rpm_build_rpms_basename}/"
-	    "/${_rpm_build_build_basename}/" "/${_rpm_build_buildroot_basename}/" "debug.*s.list")
 	LIST(APPEND SOURCE_ARCHIVE_IGNORE_FILES ${RPM_IGNORE_FILES})
 
     ENDIF(NOT _manage_rpm_dependency_missing)
 
     MACRO(PRJ_RPM_SPEC_DATA_PREPARE)
 	# %{_build_arch}
-	IF(RPM_SPEC_BUILD_ARCH STREQUAL "")
+	IF("${RPM_SPEC_BUILD_ARCH}" STREQUAL "")
 	    EXECUTE_PROCESS(COMMAND ${RPM_CMD} -E "%{_build_arch}"
 		OUTPUT_VARIABLE _RPM_BUILD_ARCH
 		OUTPUT_STRIP_TRAILING_WHITESPACE)
 
 	    SET(RPM_BUILD_ARCH "${_RPM_BUILD_ARCH}" 
 		CACHE STRING "RPM Arch")
-	ELSE(RPM_SPEC_BUILD_ARCH STREQUAL "")
+	    SET(RPM_SPEC_BUILD_ARCH_OUTPUT "")
+	ELSE("${RPM_SPEC_BUILD_ARCH}" STREQUAL "")
 	    SET(RPM_BUILD_ARCH "${RPM_SPEC_BUILD_ARCH}" 
 		CACHE STRING "RPM Arch")
 	    SET(RPM_SPEC_BUILD_ARCH_OUTPUT 
 		"BuildArch:  ${RPM_SPEC_BUILD_ARCH}")
-	ENDIF(RPM_SPEC_BUILD_ARCH STREQUAL "")
+	ENDIF("${RPM_SPEC_BUILD_ARCH}" STREQUAL "")
 
 	SET(RPM_SPEC_SUMMARY_TRANSLATION_OUTPUT "")
 	SET(_lang "")
@@ -174,8 +180,9 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 	    IF(_lang STREQUAL "")
 		SET(_lang "${_sT}")
 	    ELSE(_lang STREQUAL "")
-		LIST(APPEND RPM_SPEC_SUMMARY_TRANSLATION_OUTPUT
-		    "Summary(${_lang}): ${_sT}")
+		STRING_APPEND(RPM_SPEC_SUMMARY_TRANSLATION_OUTPUT
+		    "Summary(${_lang}): ${_sT}" "\n"
+		    )
 		SET(_lang "")
 	    ENDIF(_lang STREQUAL "")
 	ENDFOREACH(_sT ${SUMMARY_TRANSLATIONS})
@@ -183,27 +190,30 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 	SET(RPM_SPEC_SOURCE0_OUTPUT ${SOURCE_DOWNLOAD_URL_TEMPLATE})
 	
 	SET(RPM_SPEC_BUILD_REQUIRES_OUTPUT "")
-	FOREACH(_bD ${BUILD_REQUIRES})
-	    LIST(APPEND RPM_SPEC_BUILD_REQUIRES_OUTPUT
-		"BuildRequires:   ${_bD}")
-	ENDFOREACH(_bD ${BUILD_REQUIRES})
+	FOREACH(_d ${BUILD_REQUIRES})
+	    STRING_APPEND(RPM_SPEC_BUILD_REQUIRES_OUTPUT
+		"BuildRequires:   ${_d}"  "\n"
+		)
+	ENDFOREACH(_d ${BUILD_REQUIRES})
 
 	SET(RPM_SPEC_REQUIRES_OUTPUT "")
 	FOREACH(_d ${REQUIRES})
-	    LIST(APPEND RPM_SPEC_REQUIRES_OUTPUT
-		"Requires:        ${_d}")
+	    STRING_APPEND(RPM_SPEC_REQUIRES_OUTPUT "Requires:   ${_d}" "\n")
 	ENDFOREACH(_d ${REQUIRES})
 	FOREACH(_d ${REQUIRES_PRE})
-	    LIST(APPEND RPM_SPEC_REQUIRES_OUTPUT
-		"Requires(pre):   ${_d}")
+	    STRING_APPEND(RPM_SPEC_REQUIRES_PRE_OUTPUT 
+		"Requires(pre):   ${_d}" "\n"
+		)
 	ENDFOREACH(_d ${REQUIRES_PRE})
 	FOREACH(_d ${REQUIRES_PREUN})
-	    LIST(APPEND RPM_SPEC_REQUIRES_OUTPUT
-		"Requires(preun): ${_d}")
+	    STRING_APPEND(RPM_SPEC_REQUIRES_PREUN_OUTPUT 	
+		"Requires(preun): ${_d}" "\n"
+		)
 	ENDFOREACH(_d ${REQUIRES_PREUN})
 	FOREACH(_d ${REQUIRES_POST})
-	    LIST(APPEND RPM_SPEC_REQUIRES_OUTPUT
-		"Requires(post):  ${_d}")
+	    STRING_APPEND(RPM_SPEC_REQUIRES_POST_OUTPUT
+		"Requires(preun): ${_d}" "\n"
+		)
 	ENDFOREACH(_d ${REQUIRES_POST})
 
 	SET(RPM_SPEC_DESCRIPTION_TRANSLATION_OUTPUT "")
@@ -212,15 +222,17 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 	    IF(_lang STREQUAL "")
 		SET(_lang "${_dT}")
 	    ELSE(_lang STREQUAL "")
-		LIST(APPEND RPM_SPEC_DESCRIPTION_TRANSLATION_OUTPUT
-		    "%description -l ${_lang}"
-		    "${_dT}")
+		SET(RPM_SPEC_DESCRIPTION_TRANSLATION_OUTPUT
+"${RPM_SPEC_DESCRIPTION_TRANSLATION_OUTPUT}\n
+ %description -l ${_lang}
+ ${_dT}"
+		    )
 		SET(_lang "")
 	    ENDIF(_lang STREQUAL "")
 	ENDFOREACH(_dT ${DESCRIPTION_TRANSLATIONS})
 
 	IF(HAS_TRANSLATION)
-	    SET(RPM_SPEC_FIND_SECTION_OUTPUT "%find_lang %{name}")
+	    SET(RPM_SPEC_FIND_LANG_SECTION_OUTPUT "%find_lang %{name}")
 	    SET(RPM_SPEC_FILES_SECTION_OUTPUT "%files -f %{name}.lang")
 	ELSE(HAS_TRANSLATION)
 	    SET(RPM_SPEC_FILES_SECTION_OUTPUT "%files")
@@ -232,66 +244,80 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 		"# We install document using doc
 (cd \$RPM_BUILD_ROOT${PRJ_DOC_DIR}
     rm -fr *
-)")
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%doc ${PRJ_DOC_LIST}")
+)"
+		)
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%doc ${PRJ_DOC_LIST}" "\n"
+		)
+	    MESSAGE("#1 RPM_SPEC_FILES_SECTION_OUTPUT=${RPM_SPEC_FILES_SECTION_OUTPUT}")
 	ENDIF(NOT PRJ_DOC_LIST STREQUAL "")
 
 	FOREACH(_f ${FILE_INSTALL_BIN_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%{_bindir}/${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%{_bindir}/${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_BIN_LIST})
 
 	FOREACH(_f ${FILE_INSTALL_LIB_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%{_libdir}/${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%{_libdir}/${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_LIB_LIST})
 
 	FOREACH(_f ${FILE_INSTALL_PRJ_LIB_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%{_libdir}/%{name}/${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%{_libdir}/%{name}/${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_PRJ_LIB_LIST})
 
 	FOREACH(_f ${FILE_INSTALL_LIBEXEC_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%{_libexecdir}/${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%{_libexecdir}/${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_LIBEXEC_LIST})
 
 	FOREACH(_f ${FILE_INSTALL_PRJ_LIBEXEC_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%{_libexecdir}/%{name}${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%{_libexecdir}/%{name}${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_PRJ_LIBEXEC_LIST})
 
 	FOREACH(_f ${FILE_INSTALL_SYSCONF_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%config %{_sysconfdir}/${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%config %{_sysconfdir}/${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_SYSCONF_LIST})
 
 	FOREACH(_f ${FILE_INSTALL_PRJ_SYSCONF_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%config %{_sysconfdir}/%{name}/${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%config %{_sysconfdir}/%{name}/${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_PRJ_SYSCONF_LIST})
 
 	FOREACH(_f ${FILE_INSTALL_SYSCONF_NO_REPLACE_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%config(noreplce) %{_sysconfdir}/${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%config(noreplce) %{_sysconfdir}/${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_SYSCONF_NO_REPLACE_LIST})
 
 	FOREACH(_f ${FILE_INSTALL_PRJ_SYSCONF_NO_REPLACE_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%config(noreplce) %{_sysconfdir}/%{name}/${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%config(noreplce) %{_sysconfdir}/%{name}/${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_PRJ_SYSCONF_NO_REPLACE_LIST})
 
 	FOREACH(_f ${FILE_INSTALL_DATA_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%{_datadir}/${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%{_datadir}/${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_DATA_LIST})
 
 	FOREACH(_f ${FILE_INSTALL_PRJ_DATA_LIST})
-	    LIST(APPEND RPM_SPEC_FILES_SECTION_OUTPUT 
-		"%{_datadir}/%{name}/${_f}")
+	    STRING_APPEND(RPM_SPEC_FILES_SECTION_OUTPUT 
+		"%{_datadir}/%{name}/${_f}" "\n"
+		)
 	ENDFOREACH(_f ${FILE_INSTALL_PRJ_DATA_LIST})
-	STRING_JOIN(RPM_SPEC_FILES_SECTION_OUTPUT "\n" ${RPM_SPEC_FILES_SECTION_OUTPUT})
+	MESSAGE("# RPM_SPEC_FILES_SECTION_OUTPUT=${RPM_SPEC_FILES_SECTION_OUTPUT}")
 
     ENDMACRO(PRJ_RPM_SPEC_DATA_PREPARE)
 
@@ -346,10 +372,6 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 	    #-------------------------------------------------------------------
 	    # RPM build commands and targets
 
-	    FILE(MAKE_DIRECTORY  ${RPM_BUILD_BUILD})
-
-	    # Don't worry about SRPMS, RPMS and BUILDROOT, it will be created by rpmbuild
-
 	    ADD_CUSTOM_TARGET_COMMAND(srpm
 		OUTPUT ${PRJ_SRPM_FILE}
 		COMMAND ${RPMBUILD_CMD} -bs ${PRJ_RPM_SPEC_FILE}
@@ -358,7 +380,8 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 		--define '_srcrpmdir ${RPM_BUILD_SRPMS}'
 		--define '_rpmdir ${RPM_BUILD_RPMS}'
 		--define '_specdir ${RPM_BUILD_SPECS}'
-		DEPENDS ${PRJ_RPM_SPEC_FILE} ${SOURCE_ARCHIVE_FILE}
+		DEPENDS ${PRJ_RPM_SPEC_FILE} ${SOURCE_ARCHIVE_FILE} 
+		  ${RPM_BUILD_SOURCES} ${RPM_BUILD_SRPMS}
 		COMMENT "Building srpm"
 		)
 
@@ -366,14 +389,16 @@ IF(NOT DEFINED _MANAGE_RPM_CMAKE_)
 
 	    ADD_CUSTOM_TARGET_COMMAND(rpm
 		OUTPUT ${PRJ_RPM_FILES}
-		COMMAND ${RPMBUILD_CMD} -ba  ${PRJ_RPM_SPEC_FILE}
+		COMMAND ${RPMBUILD_CMD} -bb  ${PRJ_RPM_SPEC_FILE}
 		--define '_sourcedir ${RPM_BUILD_SOURCES}'
 		--define '_builddir ${RPM_BUILD_BUILD}'
 		--define '_buildrootdir ${RPM_BUILD_BUILDROOT}'
 		--define '_srcrpmdir ${RPM_BUILD_SRPMS}'
 		--define '_rpmdir ${RPM_BUILD_RPMS}'
 		--define '_specdir ${RPM_BUILD_SPECS}'
-		DEPENDS ${PRJ_RPM_SPEC_FILE} ${PRJ_SRPM_FILE}
+		DEPENDS ${PRJ_RPM_SPEC_FILE} ${SOURCE_ARCHIVE_FILE} 
+		${PRJ_SRPM_FILE}
+		  ${RPM_BUILD_BUILD} ${RPM_BUILD_BUILDROOT} ${RPM_BUILD_RPMS}
 		COMMENT "Building rpm"
 		)
 
