@@ -30,7 +30,7 @@ BuildRoot:  %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 %build
 # $RPM_OPT_FLAGS should be loaded from cmake macro.
 
-%cmake .
+%cmake @RPM_SPEC_CMAKE_FLAGS@ .
 %__make VERBOSE=1  %{?_smp_mflags}
 @RPM_SPEC_POST_BUILD_SECTION_OUTPUT@
 
